--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -588,3 +588,12 @@
   year={2011},
   note={Available at: \url{http://pinchzoom.com/posts/anatomy-of-a-html5-mobile-app/}. Accessed 22-Febuary-2012},
 }
+@article{laine2011towards,
+  title={Towards Unified Web Application Development Experience},
+  author={Laine, M. and Shestakov, D. and Litvinova, E. and Vuorimaa, P.},
+  journal={IT Professional},
+  number={99},
+  pages={1--1},
+  year={2011},
+  publisher={IEEE}
+}
