--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -222,6 +222,7 @@
 
 % Own includes
 \usepackage{datetime}
+\usepackage{enumitem}
 
 % Hyperref
 % ------------------------------------------------------------------
@@ -409,19 +410,19 @@ hard to develop applications that can be accessed with all these
 devices.
 
 The only combining factor in all these platforms is the browser, and
-it is becoming the universal application platform. We cannot anymore
-afford to build application for the silos and walled gardens of single
-platforms, and building cross-platform applications is essential in
-the modern mobile market.
+it is becoming the universal application platform. We cannot afford
+anymore to build applications for the silos and walled gardens of
+single platforms, and building cross-platform applications is
+essential in the modern mobile market.
 
-In this work, we introduce the HTML5 specification as well as several
-related specifications or specification drafts for modern web
-development. We also present several tools and libraries for mobile
-web development.
+In this work, I introduce the \abbr{HTML5} specification as well as
+several related specifications or specification drafts for modern web
+development. I also present several tools and libraries for mobile web
+development.
 
-We implemented a mobile web application and a network utility library,
+I implemented a mobile web application and a network utility library,
 and assessed the practical performance of the modern tools and
-\abbr{API}s. In this work, we present the tools and techniques for
+\abbr{API}s. In this work, I present the tools and techniques for
 performance optimization of mobile web applications.
 
 }
@@ -473,12 +474,23 @@ suorituskyvyn optimointiin mobiililaitteille.
 % show up in the TOC
 \chapter*{Acknowledgements}
 
-\fixme{Add acknowledgements}
+I would like to thank my supervisor, Professor Petri Vuorimaa, for the
+valuable comments and instructions for this work; my instructor,
+Doctor Risto Sarvas, for giving me a valuable point of view to see
+this work in the proper context as a whole; and my colleague, Jarno
+Rantanen, for making the demo application for the utility library
+documented in this work.  I would also like to thank my employer,
+Futurice, for giving me time to write this work and to do satisfying
+projects, such as the practical part of this work, every day with
+different customers.
 
-Thank you.
+Mostly, I would like to thank my wife for the valuable support and my
+firstborn son, Leo, who was born during the writing of this work. You
+are the light of my life.
+
 \vskip 10mm
 
-\noindent \fixme{Decide city...}, \DATE
+\noindent Kirkkonummi, \DATE
 \vskip 5mm
 \noindent\AUTHOR
 
