--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -17,13 +17,12 @@ which add some mobile-specific optimizations. This service would
 probably offer a better alternative for mobile web application
 optimization than the versions I used in the performance analysis.
 
-One of the major optimizations I was aware of, but did not have time
-to do, was optimizing images. This was a rather large area where I
-could have had significant improvements in the application
-performance. Going further, combining several images into one large
-image sprite would reduce the number of HTTP requests, and using
-lossless or lossy image optimization tools, the size of the images
-could be further reduced.
+One of the major optimizations I was aware of, but did not do, was
+optimizing images. This was a rather large area where I could have had
+significant improvements in the application performance. Going
+further, combining several images into one large image sprite would
+reduce the number of HTTP requests, and using lossless or lossy image
+optimization tools, the size of the images could be further reduced.
 
 The conference application targeted the high-end smartphones that the
 users were expected to have in a developer conference. However, a
@@ -36,20 +35,17 @@ applications.
 
 \section{Discussion}
 
-\fixme{Mention about user feedback and satisfaction using the
-  conference app.}
-
 The Web revolutionized the way we communicate, consume and produce
 information in ways that could not have been foreseen twenty years
-ago. On top of that, the mobile revolution has spread the Web from our
-home desks to anywhere we are, at any time. The roots of the Web lie
-in openness and universal accessibility for everyone, and today more
-and more people can afford a device to access the vast information
-spread all over the Web.
+ago. In addition, the mobile revolution has spread the Web from our
+home desks to anywhere we are, to be used at any time of the day. The
+roots of the Web lie in openness and universal accessibility for
+everyone, and today more and more people can afford a device to access
+the vast information spread all over the Web.
 
 One crucial factor in the universality is the open standards used for
 defining the protocols and APIs of the Web. HTML5 tackles many of the
-growing pains of the Web by defining a standard to handle all the
+growing pains of the Web by defining standards to handle all the
 devices capable of accessing the Internet. The set of new
 specifications or specification drafts is very large, and growing all
 the time.
@@ -70,8 +66,8 @@ utility library for handling unreliable mobile networks. The
 conference application was successfully used in two conferences by
 hundreds of people, and the received feedback was excellent. I had to
 solve a lot of problems and research solutions in areas that were new
-to us. I used the latest HTML5 and related APIs in several parts of
-our implementations.
+to me. I used the latest HTML5 and related APIs in several parts of
+the implementation.
 
 The Web is living very interesting times, and universality in
 geography and device types is growing. The browser is the culmination
